k8s/docker-flow-monitor/templates-test/deployment.yaml
---
# Source: docker-flow-monitor/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-flow-monitor-test
  labels:
    app: docker-flow-monitor-test
    chart: docker-flow-monitor-0.0.1
    heritage: Tiller
spec:
  selector:
    matchLabels:
      app: docker-flow-monitor-test
  template:
    metadata:
      labels:
        app: docker-flow-monitor-test
    spec:
      containers:
      - name: ui
        image: dockerflow/docker-flow-monitor-docs:2-19.11.22-8
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            cpu: 15m
            memory: 15Mi
          requests:
            cpu: 5m
            memory: 5Mi
